--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-blog",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+   "start": "node-dev index"
+  },
   "repository": "https://github.com/LorenzoEvans/Node-Blog.git",
   "author": "Lorenzo Evans <lorenzo.evans94@gmail.com>",
   "license": "MIT",
