--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-   "start": "node-dev index"
+    "start": "node-dev index"
   },
   "repository": "https://github.com/LorenzoEvans/Node-Blog.git",
   "author": "Lorenzo Evans <lorenzo.evans94@gmail.com>",
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "knex": "^0.16.3",
     "morgan": "^1.9.1",
-    "node-dev": "^3.1.3"
+    "node-dev": "^3.1.3",
+    "sqlite3": "^4.0.4"
   }
 }
